--- a/template.qmd
+++ b/template.qmd
@@ -15,6 +15,7 @@ author:
     orcid: 0000-0000-0000-0000
     email: sm@example.org
     url: https://example.org/
+    acknowledgements: "Thanks to funding sources."
   - name: Second Author
     biography: Another super smart person 
     affiliations:
@@ -34,11 +35,11 @@ keywords: [template, demo]
 bibliography: bibliography.bib
 ---
 
-## Introduction {#sec-intro}
+##  {#sec-intro}
 
 *TODO* Create a template that demonstrates the appearance, formatting, layout, and functionality of your format. Learn more about journal formats at <https://quarto.org/docs/journals/>. See [@CameronTrivedi2013]
 
-## Introduction
+## INTRODUCTION
 
 This document serves as a \LaTeX  draft for paper submissions to conferences of the Institute of Navigation (ION). It is intended to support and facilitate manuscript preparation for authors.
 
@@ -46,8 +47,10 @@ This document serves as a \LaTeX  draft for paper submissions to conferences of 
 
 Paper may be broken into sub-sections as desired. Sub-section titles should be writting in title case. First-level headings should be numbered, flush left, bold, and written in title case; text begings on a new line (indent first line). Second-level headings should be numbered, flush left, bold italic, and written in title case; text begins on a new line (indent first line). Thried-level headings should be unnumbered, indented, bold, title case, and ending with a period; text shoudl begin on the same line. Fourth-level headings should be unnumbered, indented, bold, italic, title case, and ending with a period; text should begin on the same line.
 
-Papers submitted for peer review should not exceed the Maximum of 15 Pages. There is no page limit for papers not undergoing the peer review process.\\
-Full justify your text. Use automatic hyphenation and check spelling. Digitize or paste down figures.\\
+Papers submitted for peer review should not exceed the Maximum of 15 Pages. There is no page limit for papers not undergoing the peer review process.
+
+Full justify your text. Use automatic hyphenation and check spelling. Digitize or paste down figures.
+
 Disclaimers or notes should be placed at the end of the article just prior to references.
 
 ### Use of figures
@@ -58,7 +61,7 @@ Incorporate graphics in the body of the text, centered within the text. Figure n
 
 Tables should be centered within the text. The table number should appear above the table title and body in bold font. Number the tables in the order in which they are mentioned in your paper. The title of the table should appear one double-spaced line below the table number.
 
-### References
+### REFERENCES
 
 For the time being biblatex-apa is the only implementation of 7th-ed. APA citation and bibliography style. Note that you need at least version 9.0 (released 2019-11-23) of biblatex-apa (\url{https://ctan.org/pkg/biblatex-apa}).
 
@@ -71,19 +74,18 @@ In 2023, the ION switched to the APA7 style reference formatting. References sho
 In this template, the \textit{biblatex} package is used. This matches the ION formatting guidelines very well while using BibTex.
 Use \verb|\citep{}| or \verb|\autocite| and \verb|\citet{}| or \verb|\textcitet| as desired.
 
-
 ## Language
 
 Your paper must be in English.
 
-## Additional instructions for authors
+## additional instructions for authors for electronic paper preparation for publication
 
 Electronic files (PDF File) should be uploaded the ION’s Abstract Management Portal at <www.ion.org/abstracts>. If your paper was created in \LaTeX, convert to PDF file before submitting.
 
 
-## Acceptable software
+## acceptable software
 
-Adope Acrobat PDF files.
+Adobe Acrobat PDF files.
 
 ION cannot accept \LaTeX files, all \LaTeX documents must be converted to PDF file prior to submission. Make sure the file is formatted properly before uploading to the AMP.  Documents converted from the \LaTeX or TeX typesetting language into the Adobe’s Postscript of PDF files usually contain fixed-resolution bitmap fonts that do not print or display well on a variety of printer and computer screens.
 
